--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
 <body>
     <div class="page">
         <div class="game"></div>
-        <!-- <div class="popup" id="popup_start">
+        <div class="popup popup" id="popup_start">
             <h1 class="popup__title">KITTEN JUMP</h1>
             <p class="popup__description">
                 Добро пожаловать в Kitten Jump!<br>
                 Это как Doodle Jump, но с котятами.<br>
                 Please enjoy :)
             </p>
-            <button class="popup__button">Начать игру</button>
-            <a class="popup__link">Как играть?</a>
-        </div> -->
-        <!-- <div class="popup" id="popup_game-over">
-            <h2 class="popup__title">GAME OVER</h1>
-            <p class="popup__description"></p>
-            <button class="popup__button">Продолжить</button>
+            <p class="popup__description">Основано на <a href="#" target="_blank" class="popup__link">туториале</a>.</p>
+            <button class="popup__button" id="popup-button_start">Начать игру</button>
+            <a class="popup__description popup__link" id="popup_link-to-rules">Как играть?</a>
         </div>
-        <div class="popup" id="popup_how-to-play">
+        <div class="popup popup_inactive" id="popup_game-over">
+            <h2 class="popup__title">GAME OVER</h1>
+            <p class="popup__description" id="score"></p>
+            <p class="popup__description" id="best-score"></p>
+            <button class="popup__button" id="popup-button_game-over">Продолжить</button>
+        </div>
+        <div class="popup popup_inactive" id="popup_rules">
             <h2 class="popup__title">Для компьютера</h2>
             <p class="popup__description">Для управления используйте стрелки на клавиатуре, вправо и влево. Двойное нажатие на стрелку не ускоряет котёнка, а при первом нажатии на стрелку, обратную направлению движения, котёнок останавливает движение.</p>
             <h2 class="popup__title">Для телефона</h2>
             <p class="popup__description">Для управления нажимайте на правую и левую часть экрана. Так же, как и в компьютерной версии, двойное нажатие на стрелку не ускоряет котёнка, а при первом нажатии на стрелку, обратную направлению движения, котёнок останавливает движение.</p>
-            <a class="popup__link">Назад</a>
-        </div> -->
+            <a class="popup__description popup__link">Назад</a>
+        </div>
         <script src="scripts/index.js"></script>
     </div>
 </body>
