--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 Это как Doodle Jump, но с котятами.<br>
                 Please enjoy :)
             </p>
-            <p class="popup__description">Основано на <a href="#" target="_blank" class="popup__link">туториале</a>.</p>
+            <p class="popup__description">Основано на <a href="https://youtu.be/8xPsg6yv7TU" target="_blank" class="popup__link">туториале Ania Kubów.</a></p>
             <button class="popup__button" id="popup-button_start">Начать игру</button>
             <a class="popup__description popup__link" id="popup_link-to-rules">Как играть?</a>
         </div>
