feat: make the game adaptive for smaller screens

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="page">
         <div class="game"></div>
-        <div class="popup popup" id="popup_start">
+        <div class="popup" id="popup_start">
             <h1 class="popup__title">KITTEN JUMP</h1>
             <p class="popup__description">
                 Добро пожаловать в Kitten Jump!<br>
