fix: fix controllers for touch screens

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <div class="page">
-        <div class="game">
-            <div class="game__left game__disabled"></div>
-            <div class="game__right game__disabled"></div>
-        </div>
+        <div class="game"></div>
+        <div class="controller__left"></div>
+        <div class="controller__right"></div>
         <div class="popup" id="popup_start">
             <h1 class="popup__title">KITTEN JUMP</h1>
             <p class="popup__description">
